# xmas_cka

./: README.md  early_layer_study.py  evaluate_cka.py  main.py  pyproject.toml  requirements.txt
datasets/: pcam.py
evaluators/: base.py
loggers/: base.py  display.py  tensorboard.py
losses/: cka.py  cka_map.py  cka_map_loss.py  distillation_loss.py  log_cosh_loss.py
metrics/: accuracy.py  base.py  cka.py  loss.py
models/: cifar10_models.py
models/cifar_10_models/: resnet.py  vgg.py
target_maps/: analytical.py  comical.py  utils.py
trainers/: base.py  maptraining.py  pretraining.py
utilities/: utils.py
