[tool.poetry]
name = "xmas_cka"
version = "0.1.0"
description = ""
authors = ["Reza Davari <rezazzr@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
poethepoet = "^0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "pip3 install torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html"
