[tool.poetry]
name = "xmas_cka"
version = "0.1.0"
description = ""
authors = ["Reza Davari <rezazzr@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
poethepoet = "^0.12.3"
black = "^22.1.0"
aiohttp = "^3.8.1"
aiohttp_cors = "^0.7.0"
prettytable = "^3.1.1"
matplotlib = "^3.5.1"
tensorboard = "^2.8.0"
Pillow = "^9.0.1"
jupyter = "^1.0.0"
pandas = "^1.4.1"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
nb-black = "^1.0.7"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "pip3 install torch==1.10.2+cu111 torchvision==0.11.3+cu111 torchaudio==0.10.2 -f https://download.pytorch.org/whl/torch_stable.html"
